k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue
                port:
                  number: 8080
    - host: api.hello.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask
                port:
                  number: 5000
